--- a/peugeot.html
+++ b/peugeot.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <img src="Peugeot.jpg" alt="Peugeot 5008">
+  <img src="peugeot.jpg" alt="Peugeot 5008">
   <h2>Peugeot 5008 Dipasarkan Rp 475,5 Juta</h2>
   <p>
     JAKARTA, KOMPAS.com — Setelah informasinya sempat dibocorkan oleh Kompas.com pada awal bulan ini, akhirnya PT Astra International Tbk-Peugeot Sales Operation meluncurkan Peugeot 5008. Multi purpose vehicle (MPV) premium ini dibanderol Rp 475,5 juta on the road Jakarta atau lebih tinggi dari yang digosipkan awalnya, Rp 475 juta.
@@ -31,6 +31,4 @@
   </p>
   <a href="index.html">⬅ Kembali ke Beranda</a>
 </body>
-
 </html>
-
